### Copyright (c) 2022 Advanced Micro Devices, Inc. All rights reserved. ###

### Parser ############################################################################################################
add_subdirectory(ddEventParser)

### Server ############################################################################################################
add_subdirectory(ddEventServer)

### Client ############################################################################################################
add_subdirectory(ddEventClient)

### Streamer ##########################################################################################################
add_subdirectory(ddEventStreamer)
