### Copyright (c) 2021 Advanced Micro Devices, Inc. All rights reserved. ###

### Shared Code #######################################################################################################
add_subdirectory(ddRpcShared)

### Client ############################################################################################################
add_subdirectory(ddRpcClient)

### Server ############################################################################################################
add_subdirectory(ddRpcServer)
